# Simple_RPC

./: LICENSE  README.md
include/simple_rpc/client/: rpc_client.h
include/simple_rpc/server/: rpc_server.h
include/simple_rpc/transport/: TCP_socket.h  socket.h  transport.h
src/transport/: TCP_socket.cpp
tests/: CMakeLists.txt  README.md
tests/client/: rpc_client_test.cpp
tests/server/: rpc_server_test.cpp
tests/transport/: TCP_socket_test.cpp
